/*
 *
 */

2008-10-12 21:59 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * samples/dbbrowser/dbbrowser.prg
    * sample updated

  * src/hrbcompat/tbrowse/wx_browse.cpp
  * src/hrbcompat/tbrowse/wx_browse.h
    + added evt handler fro selecting a cell
    - removed unneeded WXHBROWSE_INITIALIZE func.

  * src/hrbcompat/tbrowse/wxhbrowsedbprovider.prg
  * src/hrbcompat/tbrowse/wxhbrowse.prg
    * renamed wxhBrowse:SetRowIndex to wxhBrowse:SelectRowIndex

2008-10-12 17:25 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * samples/dbbrowser/dbbrowser.prg
    * updated sample

  * src/hrbcompat/tbrowse/wxhbrowsedbprovider.prg
  * src/hrbcompat/tbrowse/wxhbrowse.prg
    % optimized method of calling for ::SkipBlock, this enhances the browser
      time response.

  * src/raddox/dba.prg
    * not use of PushWS to get the WS stack size (profiler number of calls)

  * src/wxbase/networking/wx_socketbase.cpp
  * src/wxbase/networking/wx_socketclient.cpp
  * src/wxbase/networking/wx_socketserver.cpp
    ! Comented out code for creating error.
      ; TODO: create our own error messaging frame.


2008-10-11 14:54 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * samples/dbbrowser/dbbrowser.prg
  * src/hrbcompat/tbrowse/wxhbrowse.prg
    * testing code

2008-10-11 12:20 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * include/wxharbour.ch
  * src/common/wxhfuncs.prg
    + added MULTILINE clause to @ GET ...

  * samples/dbbrowser/dbbrowser.prg
    * updated sample

  * src/hrbcompat/tbrowse/wx_browse.cpp
  * src/hrbcompat/tbrowse/wx_browse.h
  * src/hrbcompat/tbrowse/wxhbrowsedbprovider.prg
  * src/hrbcompat/tbrowse/wxhbrowse.prg
    * implemented TBrowse *alike*:
      DATA cargo, GoBottomBlock, GoTopBlock, SkipBlock
      PROPERTY ColCount, RowCount, ColPos, RowPos
      METHOD AddColumn( column ), DelColumn( pos ), Down, GoBottom, GoTop
        PageDown, PageUp, RefreshAll, Up
    ; I don't want to achieve 100% of TBrowse compat, only to give