@@ -2,6 +2,14 @@
  *
  */
 
+2008-10-14 08:59 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
+  * samples/dbbrowser/dbbrowser.prg
+    * updated sample
+
+  * src/hrbcompat/tbrowse/wx_browse.cpp
+  * src/hrbcompat/tbrowse/wxhbrowse.prg
+    * cleaning code, testing
+
 2008-10-12 21:59 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
   * samples/dbbrowser/dbbrowser.prg
     * sample updated
